# rust-telegram-openai-bot

./: .env  .env.example  .gitignore  Cargo.toml  README.md
src/: command.rs  db.rs  draft.txt  gpt.rs  libs.rs  main.rs  prompt.rs  redis.rs  utils.rs
