[package]
name = "rust-telegram-openai-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0.163", features = ["derive"] }
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
chatgpt_rs = "1.1.6"
dotenv = "0.15.0"
rusqlite = "0.29.0"
tokio_interval = "0.1.4"
sentry = { version = "0.31.2", features = ["anyhow", "log", "debug-logs"] }
textwrap = "0.16.0"
uuid = { version = "1.3.3", features = ["v4"] }
lazy_static = "1.4.0"
